--- a/src/Narato.Libraries.POC.API/config.json
+++ b/src/Narato.Libraries.POC.API/config.json
@@ -1,5 +1,5 @@
 ﻿{
   "DatabaseConfiguration": {
-    "ConnectionString": ""
+    "ConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=LibPOC;Integrated Security=SSPI;AttachDBFilename=D:\\LibPOC.mdf"
   }
 }
