--- a/src/Narato.Libraries.POC.APIContracts/Narato.Libraries.POC.APIContracts.csproj
+++ b/src/Narato.Libraries.POC.APIContracts/Narato.Libraries.POC.APIContracts.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>Narato.Libraries.POC.APIContracts</AssemblyName>
@@ -10,9 +9,10 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="DTO\" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
+  </ItemGroup>
 </Project>
