--- a/src/Narato.Libraries.POC.Domain/Narato.Libraries.POC.Domain.csproj
+++ b/src/Narato.Libraries.POC.Domain/Narato.Libraries.POC.Domain.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>Narato.Libraries.POC.Domain</AssemblyName>
@@ -10,14 +9,12 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
     <PackageReference Include="Narato.ResponseMiddleware.Models" Version="2.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Contracts\DataProviders\" />
     <Folder Include="Models\" />
   </ItemGroup>
-
 </Project>
