--- a/src/Narato.Libraries.POC.API/Narato.Libraries.POC.API.csproj
+++ b/src/Narato.Libraries.POC.API/Narato.Libraries.POC.API.csproj
@@ -15,7 +15,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Narato.Libraries.POC.Domain\Narato.Libraries.POC.Domain.csproj" />
+    <ProjectReference Include="..\Narato.Libraries.POC.Application\Narato.Libraries.POC.Application.csproj" />
+    <ProjectReference Include="..\Narato.Libraries.POC.Contracts\Narato.Libraries.POC.Contracts.csproj" />
     <ProjectReference Include="..\Narato.Libraries.POC.DataProvider\Narato.Libraries.POC.DataProvider.csproj" />
   </ItemGroup>
   <ItemGroup>
