--- a/src/Narato.Libraries.POC.Application/Narato.Libraries.POC.Application.csproj
+++ b/src/Narato.Libraries.POC.Application/Narato.Libraries.POC.Application.csproj
@@ -6,7 +6,9 @@
     <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Narato.Libraries.POC.Contracts\Narato.Libraries.POC.Contracts.csproj" />
     <ProjectReference Include="..\Narato.Libraries.POC.Domain\Narato.Libraries.POC.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UseCases\Author\" />
   </ItemGroup>
 </Project>
